--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && jest ./dist --forceExit",
+    "test": "jest",
     "dev": "tsnd --respawn --transpile-only ./src/main",
     "build": "tsc",
     "start": "node ./dist/src/main"
@@ -14,13 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "cpf-cnpj-validator": "^1.0.3",
     "express": "^4.17.1",
-    "jest": "^27.0.6",
     "pg-promise": "^10.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.3",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
